--- a/DrawAndRace/res/layout/title_activity.xml
+++ b/DrawAndRace/res/layout/title_activity.xml
@@ -11,6 +11,12 @@
         android:layout_height="wrap_content"
         android:text="Play" />
 
+    <Button
+        android:id="@+id/galleryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Galerie" />
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
