--- a/DrawAndRace/res/layout/gallery_activity.xml
+++ b/DrawAndRace/res/layout/gallery_activity.xml
@@ -27,9 +27,10 @@
 
         <Button
             android:id="@+id/buttonSelectPicture"
-            android:layout_width="wrap_content"
+            android:layout_width="66dp"
             android:layout_height="wrap_content"
-            android:text="Selectionner" />
+            android:text="OK" />
+
     </LinearLayout>
 
 </LinearLayout>
