--- a/DrawAndRace/res/layout/title_activity.xml
+++ b/DrawAndRace/res/layout/title_activity.xml
@@ -33,8 +33,9 @@
             android:id="@+id/btnExit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/btnPlay"
             android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/imageView3"
+            android:layout_marginBottom="15dp"
             android:src="@drawable/exit" />
 
     </RelativeLayout>
